<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2008 The Android Open Source Project
     Copyright (c) 2018-2026 Roumen Petrov.  All rights reserved.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/text_preferences">

        <ListPreference
            android:defaultValue="@string/pref_thememode_default"
            android:dialogTitle="@string/dialog_title_thememode_preference"
            android:entries="@array/entries_thememode_preference"
            android:entryValues="@array/entryvalues_thememode_preference"
            android:key="thememode"
            android:summary="@string/summary_thememode_preference"
            android:title="@string/title_thememode_preference"/>

        <ListPreference
            android:defaultValue="@string/pref_color_default"
            android:dialogTitle="@string/dialog_title_color_preference"
            android:entries="@array/entries_color_preference"
            android:entryValues="@array/entryvalues_color_preference"
            android:key="color"
            android:summary="@string/summary_color_preference"
            android:title="@string/title_color_preference"/>

        <ListPreference
            android:defaultValue="@string/pref_fontsize_default"
            android:dialogTitle="@string/dialog_title_fontsize_preference"
            android:entries="@array/entries_fontsize_preference"
            android:entryValues="@array/entryvalues_fontsize_preference"
            android:key="fontsize"
            android:summary="@string/summary_fontsize_preference"
            android:title="@string/title_fontsize_preference"/>

        <Preference
            android:key="@string/key_fontsource_preference"
            android:persistent="false"
            android:summary="@string/summary_fontsource_preference"
            android:title="@string/title_fontsource_preference"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/shell_preferences">

        <ListPreference
            android:defaultValue="@string/pref_termtype_default"
            android:dialogTitle="@string/dialog_title_termtype_preference"
            android:entries="@array/entries_termtype_preference"
            android:entryValues="@array/entries_termtype_preference"
            android:key="termtype"
            android:summary="@string/summary_termtype_preference"
            android:title="@string/title_termtype_preference"/>

        <CheckBoxPreference
            android:defaultValue="@bool/pref_close_window_on_process_exit_default"
            android:key="close_window_on_process_exit"
            android:summary="@string/summary_close_window_on_process_exit_preference"
            android:title="@string/title_close_window_on_process_exit_preference"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="linux"
        android:title="@string/linux_preferences">

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="@bool/pref_ubuntu_welcome_default"
            android:key="ubuntu_show_welcome"
            android:summary="@string/summary_ubuntu_show_welcome"
            android:title="@string/title_ubuntu_show_welcome"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/keyboard_preferences">

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="@bool/pref_extra_keys_enabled_default"
            android:key="extra_keys_enabled"
            android:summary="@string/summary_extra_keys_enabled"
            android:title="@string/title_extra_keys_enabled"/>

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="@bool/pref_extra_keys_symbols_default"
            android:dependency="extra_keys_enabled"
            android:key="extra_keys_symbols"
            android:summary="@string/summary_extra_keys_symbols"
            android:title="@string/title_extra_keys_symbols"/>

        <ListPreference
            android:defaultValue="@string/pref_backaction_default"
            android:dialogTitle="@string/dialog_title_backaction_preference"
            android:entries="@array/entries_backaction_preference"
            android:entryValues="@array/entryvalues_backaction_preference"
            android:key="backaction"
            android:summary="@string/summary_backaction_preference"
            android:title="@string/title_backaction_preference"/>

        <ListPreference
            android:defaultValue="@string/pref_controlkey_default"
            android:dialogTitle="@string/dialog_title_controlkey_preference"
            android:entries="@array/entries_controlkey_preference"
            android:entryValues="@array/entryvalues_controlkey_preference"
            android:key="controlkey"
            android:summary="@string/summary_controlkey_preference"
            android:title="@string/title_controlkey_preference"/>

        <ListPreference
            android:defaultValue="@string/pref_fnkey_default"
            android:dialogTitle="@string/dialog_title_fnkey_preference"
            android:entries="@array/entries_fnkey_preference"
            android:entryValues="@array/entryvalues_fnkey_preference"
            android:key="fnkey"
            android:summary="@string/summary_fnkey_preference"
            android:title="@string/title_fnkey_preference"/>

        <ListPreference
            android:defaultValue="@string/pref_ime_default"
            android:dialogTitle="@string/dialog_title_ime_preference"
            android:entries="@array/entries_ime_preference"
            android:entryValues="@array/entryvalues_ime_preference"
            android:key="ime"
            android:summary="@string/summary_ime_preference"
            android:title="@string/title_ime_preference"/>

        <CheckBoxPreference
            android:defaultValue="@bool/pref_alt_sends_esc_default"
            android:key="alt_sends_esc"
            android:summaryOff="@string/alt_sends_esc_summary_off"
            android:summaryOn="@string/alt_sends_esc_summary_on"
            android:title="@string/alt_sends_esc"/>

        <CheckBoxPreference
            android:defaultValue="@bool/pref_use_keyboard_shortcuts_default"
            android:key="use_keyboard_shortcuts"
            android:summaryOff="@string/use_keyboard_shortcuts_summary_off"
            android:summaryOn="@string/use_keyboard_shortcuts_summary_on"
            android:title="@string/title_use_keyboard_shortcuts"/>

        <CheckBoxPreference
            android:defaultValue="@bool/pref_mouse_tracking_default"
            android:key="mouse_tracking"
            android:summary="@string/summary_mouse_tracking_preference"
            android:title="@string/title_mouse_tracking_preference"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="screen"
        android:title="@string/screen_preferences">

        <ListPreference
            android:defaultValue="@string/pref_statusbar_default"
            android:dialogTitle="@string/dialog_title_statusbar_preference"
            android:entries="@array/entries_statusbar_preference"
            android:entryValues="@array/entryvalues_statusbar_preference"
            android:key="statusbar"
            android:summary="@string/summary_statusbar_preference"
            android:title="@string/title_statusbar_preference"/>

        <ListPreference
            android:defaultValue="@integer/pref_actionbar_default"
            android:dialogTitle="@string/dialog_title_actionbar_preference"
            android:entries="@array/entries_actionbar_preference"
            android:entryValues="@array/entryvalues_actionbar_preference"
            android:key="actionbar"
            android:summary="@string/summary_actionbar_preference_compat"
            android:title="@string/title_actionbar_preference"/>

        <ListPreference
            android:defaultValue="@integer/pref_orientation_default"
            android:dialogTitle="@string/dialog_title_orientation_preference"
            android:entries="@array/entries_orientation_preference"
            android:entryValues="@array/entryvalues_orientation_preference"
            android:key="@string/key_orientation_preference"
            android:summary="@string/summary_orientation_preference"
            android:title="@string/title_orientation_preference"/>

        <ListPreference
            android:defaultValue="@integer/pref_sizecalc_default"
            android:dialogTitle="@string/dialog_title_sizecalc_preference"
            android:entries="@array/entries_sizecalc_preference"
            android:entryValues="@array/entryvalues_sizecalc_preference"
            android:key="sizecalc"
            android:summary="@string/summary_sizecalc_preference"
            android:title="@string/title_sizecalc_preference"/>

        <CheckBoxPreference
            android:defaultValue="@bool/pref_utf8_by_default_default"
            android:key="utf8_by_default"
            android:summary="@string/summary_utf8_by_default_preference"
            android:title="@string/title_utf8_by_default_preference"/>

        <!--
        <ListPreference
            android:defaultValue="@string/pref_cursorstyle_default"
            android:dialogTitle="@string/dialog_title_cursorstyle_preference"
            android:entries="@array/entries_cursorstyle_preference"
            android:entryValues="@array/entryvalues_cursorstyle_preference"
            android:key="cursorstyle"
            android:summary="@string/summary_cursorstyle_preference"
            android:title="@string/title_cursorstyle_preference"/>

        <ListPreference
            android:defaultValue="@string/pref_cursorblink_default"
            android:dialogTitle="@string/dialog_title_cursorblink_preference"
            android:entries="@array/entries_cursorblink_preference"
            android:entryValues="@array/entryvalues_cursorblink_preference"
            android:key="cursorblink"
            android:summary="@string/summary_cursorblink_preference"
            android:title="@string/title_cursorblink_preference"/>
        -->

    </PreferenceCategory>

    <PreferenceCategory
        android:key="diagnostics"
        android:title="@string/diagnostics_preferences">

        <Preference
            android:key="diagnostics_view_logs"
            android:persistent="false"
            android:summary="@string/summary_diagnostics_view_logs"
            android:title="@string/title_diagnostics_view_logs"/>

        <ListPreference
            android:defaultValue="@string/pref_log_level_default"
            android:dialogTitle="@string/dialog_title_diagnostics_log_level"
            android:entries="@array/entries_log_level_preference"
            android:entryValues="@array/entryvalues_log_level_preference"
            android:key="diagnostics_log_level"
            android:summary="@string/summary_diagnostics_log_level"
            android:title="@string/title_diagnostics_log_level"/>

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="@bool/pref_developer_logging_default"
            android:key="diagnostics_developer_logging"
            android:summary="@string/summary_diagnostics_developer_logging"
            android:title="@string/title_diagnostics_developer_logging"/>

        <Preference
            android:key="diagnostics_clear"
            android:persistent="false"
            android:summary="@string/summary_diagnostics_clear"
            android:title="@string/title_diagnostics_clear"/>

        <Preference
            android:key="diagnostics_export"
            android:persistent="false"
            android:summary="@string/summary_diagnostics_export"
            android:title="@string/title_diagnostics_export"/>

    </PreferenceCategory>

</PreferenceScreen>
