<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (c) 2018-2026 Roumen Petrov.  All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/header_background"
    android:gravity="center_vertical"
    android:minHeight="144dp"
    android:orientation="vertical"
    android:paddingStart="@dimen/activity_margin"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingTop="24dp"
    android:paddingEnd="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin"
    android:paddingBottom="8dp">

    <LinearLayout
        android:id="@+id/app_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/application_site"
            app:srcCompat="@drawable/garden_emblem"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/application_terminal"
                android:textColor="@color/brand_white"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/application_positioning"
                android:textColor="@color/brand_text_muted_dark"
                android:textSize="13sp"/>

            <TextView
                android:id="@+id/app_ver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/brand_text_muted_dark"
                android:textSize="12sp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
